--- a/app/Resources/views/SmartStartBase.html.twig
+++ b/app/Resources/views/SmartStartBase.html.twig
@@ -1,10 +1,62 @@
+{% use 'Bot.html.twig' %}
+
 <!DOCTYPE html>
 <html>
 <head>
 
     <title>{% block title %}{% endblock %}</title>
     {% block stylesheets %}
+        <style>
+            body {font-family: Arial, Helvetica, sans-serif;}
+
+            /* The Modal (background) */
+            .modal {
+                display: none; /* Hidden by default */
+                position: fixed; /* Stay in place */
+                z-index: 1; /* Sit on top */
+                padding-top: 0px; /* Location of the box */
+                left: 0;
+                top: 0;
+                width: 100%; /* Full width */
+                height: 100%; /* Full height */
+                overflow: auto; /* Enable scroll if needed */
+                background-color: rgb(0,0,0); /* Fallback color */
+                background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+            }
+
+
+            /* Add Animation */
+            @-webkit-keyframes animatetop {
+                from {top:-300px; opacity:0}
+                to {top:0; opacity:1}
+            }
+
+            @keyframes animatetop {
+                from {top:-300px; opacity:0}
+                to {top:0; opacity:1}
+            }
+
+            /* The Close Button */
+            .close {
+                color: white;
+                float: right;
+                font-size: 28px;
+                font-weight: bold;
+            }
+
+            .close:hover,
+            .close:focus {
+                color: #000;
+                text-decoration: none;
+                cursor: pointer;
+            }
+        </style>
         <meta charset="UTF-8" />
+        <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+        <link rel="stylesheet" type="text/css" href="{{ asset('BotAssets/jquery.convform.css') }}">
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+        <link rel="stylesheet" type="text/css" href="{{ asset('BotAssets/demo.css') }}">
+        <link rel="stylesheet" type="text/css" href="{{ asset('BotAssets/PopupStyles.css') }}">
         <link href="{{ asset('assets/css/googleapis.css') }}" rel="stylesheet">
         <!--===============================================================================================-->
         <link rel="icon" type="image/png" href="{{ asset('assets/images/icons/favicon.png') }}"/>
@@ -269,22 +321,43 @@
 
             <div class="col-sm-6 col-md-4 p-t-50">
                 <!-- - -->
-                <h4 class="txt13 m-b-38">
-                    Chat With Us
-                </h4>
+
 
                 <!-- Gallery footer -->
                 <div class="wrap-gallery-footer flex-w">
-                    <div id="main">
-                        <div style="color: white">user: <span id="user"></span></div>
-                        <div style="color: white">chatbot: <span id="chatbot"></span></div>
-                        <div><input id="input" type="text"  placeholder="say anything..." autocomplete="off"/></div>
-                    </div>
+                        <h4 class="txt13 m-b-38" style="text-align: center">
+                            Chat With Us If You Need Anything
+                        </h4>
+                        <div id="bot" class="neutral">
+                            <div id="head">
+                                <div id="left-ear">
+                                    <div id="left-ear-inner"></div>
+                                </div>
+                                <div id="face">
+                                    <div id="eyes">
+                                        <div id="left-eye"></div>
+                                        <div id="right-eye"></div>
+                                    </div>
+                                    <div id="mouth"></div>
+                                </div>
+                                <div id="right-ear">
+                                    <div id="right-ear-inner"></div>
+                                </div>
+                            </div>
+                            <ul id="switches">
+                                <li style="color: white" onmouseover="setStatus('speaking')"> Helpful </li>
+                                <li style="color: white"  onmouseover="setStatus('thinking')"> Useful </li>
+                                <li style="color: white"  onmouseover="setStatus('listening')"> Listening </li>
+                                <li style="color: white"  onmouseover="setStatus('computing')"> Smart </li>
+                                <center><button id="myBtn" class="btn-outline-info">Chat With Us</button></center>
+                            </ul>
+                        </div>
+
+
                 </div>
 
             </div>
-        </div>
-    </div>
+        </div></div>
 
     <div class="end-footer bg2">
         <div class="container">
@@ -298,11 +371,17 @@
                 </div>
 
                 <div class="txt17 p-r-20 p-t-5 p-b-5">
-                    Copyright &copy; 2018 All rights reserved  |  This template is made with <i class="fab fa-heart"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
+
                 </div>
             </div>
         </div>
     </div>
+    <div id="myModal" class="modal">
+        {% block bot_block %}
+        {{ parent() }}
+    {% endblock  bot_block %}
+    </div>
+
 </footer>
 
 
@@ -378,6 +457,82 @@
     <!--===============================================================================================-->
     <script src="{{ asset('assets/js/main.js') }}"></script>
     <script src="{{ asset('assets/BotScript.js') }}"></script>
+    <script type="text/javascript" src="{{ asset('BotAssets/jquery-1.12.3.min.js') }}"></script>
+    <script type="text/javascript" src="{{ asset('BotAssets/autosize.min.js') }}"></script>
+    <script type="text/javascript" src="{{ asset('BotAssets/jquery.convform.js') }}"></script>
+    <script type="text/javascript" src="{{ asset('BotAssets/PopupJs.js') }}"></script>
+
+    <script>
+        function google(stateWrapper, ready) {
+            window.open("https://google.com");
+            ready();
+        }
+        function bing(stateWrapper, ready) {
+            window.open("https://bing.com");
+            ready();
+        }
+        var rollbackTo = false;
+        var originalState = false;
+        function storeState(stateWrapper, ready) {
+            rollbackTo = stateWrapper.current;
+            console.log("storeState called: ",rollbackTo);
+            ready();
+        }
+        function rollback(stateWrapper, ready) {
+            console.log("rollback called: ", rollbackTo, originalState);
+            console.log("answers at the time of user input: ", stateWrapper.answers);
+            if(rollbackTo!=false) {
+                if(originalState==false) {
+                    originalState = stateWrapper.current.next;
+                    console.log('stored original state');
+                }
+                stateWrapper.current.next = rollbackTo;
+                console.log('changed current.next to rollbackTo');
+            }
+            ready();
+        }
+        function restore(stateWrapper, ready) {
+            if(originalState != false) {
+                stateWrapper.current.next = originalState;
+                console.log('changed current.next to originalState');
+            }
+            ready();
+        }
+    </script>
+    <script>
+        jQuery(function($){
+            convForm = $('#chat').convform({selectInputStyle: 'disable'});
+            console.log(convForm);
+        });
+    </script>
+    <script>
+        // Get the modal
+        var modal = document.getElementById('myModal');
+
+        // Get the button that opens the modal
+        var btn = document.getElementById("myBtn");
+
+        // Get the <span> element that closes the modal
+        var span = document.getElementsByClassName("close")[0];
+
+        // When the user clicks the button, open the modal
+        btn.onclick = function() {
+            modal.style.display = "block";
+        }
+
+        // When the user clicks on <span> (x), close the modal
+        span.onclick = function() {
+            modal.style.display = "none";
+        }
+
+        // When the user clicks anywhere outside of the modal, close it
+        window.onclick = function(event) {
+            if (event.target == modal) {
+                modal.style.display = "none";
+            }
+        }
+    </script>
+
 
 
 {% endblock %}
